--- a/src/pages/travel-globe.astro
+++ b/src/pages/travel-globe.astro
@@ -38,7 +38,7 @@ const travelPoints = posts
   <Header activeNav="travel" />
   <Breadcrumbs
     pageTitle="Travel Globe"
-    pageDesc="Locations traveled or future bucket list places to be explored."
+    pageDesc="Global view of places traveled and to be traveled! Click on the pins: 📍"
   >
     <TravelGlobeComponent client:only="react" pointsData={travelPoints} />
   </Breadcrumbs>
